fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,27 @@
-body{
+body, html{
 	background-color: #212121;
 	width: 100%;
 	height: 100%;
 	margin: 0;
-
+	display: flex;
+	flex-direction: column;
 	font-family: "Arial"; /*todo*/
+	justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
 }
 
 #toolbar{
 	padding: 10px;
-	position: absolute;
-	top: 0;
-	left: 0;
+	position: relative;
 	width: calc(100% - 20px);
 	height: 25px;
 	background-color: #FAFAFA;
-	z-index: 2;
 }
 
 #info-panel{
 	padding: 10px;
-	position: absolute;
-	top: 45px;
-	left: 0;
+	position: relative;
 	width: calc(100% - 20px);
 	height: 25px;
 	background-color: rgb(51, 51, 51);
@@ -57,14 +56,12 @@ body{
 }
 
 #main{
-	position: absolute;
-	z-index: 1;
+	position: relative;
 	width: 100%;
-	height: calc(100% - 90px);
-	top: 45px;
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding-top: 45px;
+	flex: auto;
 }
 
 .nav-btn{
